--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,13 @@
 #main > div:nth-child(2),
 #main > div:nth-child(3),
 #main > div:nth-child(4){
+    text-transform: capitalize;
     text-decoration: line-through;
 }
 #main > div > div{
     display: flex;
     flex-direction: column;
+}
+p[id^="fichier"]{
+    display: none;
 }
