--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,11 @@
 #main > div{
     margin: 0 10px;
 }
-/*#main > div:nth-child(2),*/
-/*#main > div:nth-child(3),*/
-/*#main > div:nth-child(4){*/
-/*    text-transform: capitalize;*/
-/*    text-decoration: line-through;*/
-/*}*/
+#main > div:nth-child(2),
 #main > div:nth-child(3),
+#main > div:nth-child(4){
+    text-transform: capitalize;
+}
 #main > div:nth-child(4){
     text-transform: capitalize;
     text-decoration: line-through;
