--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    grid-area: 2 / 1 / 2 / 4;
+    background-color: #f00;
 }
 #main > div{
     margin: 0 10px;
@@ -15,9 +17,25 @@
     display: flex;
     flex-direction: column;
 }
+#text1{
+    grid-area: 1 / 1 / 1 / 2;
+    background-color: #0f0;
+}
+#text2{
+    grid-area: 1 / 2 / 1 / 4;
+    background-color: #00f;
+}
+#output{
+    margin: 0;
+    grid-area: 3 / 1 / 3 /4;
+    background-color: #ff0;
+}
 
 body{
-    max-width: calc(100% - 20px);
+    width: calc(100% - 20px);
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
 }
 p[id^="fichier"]{
     display: none;
