--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     flex-wrap: nowrap;
     grid-area: 2 / 1 / 2 / 4;
-    background-color: #f00;
+    /* background-color: #f00; */
 }
 #main > div{
     margin: 0 10px;
@@ -19,16 +19,16 @@
 }
 #text1{
     grid-area: 1 / 1 / 1 / 2;
-    background-color: #0f0;
+    /* background-color: #0f0; */
 }
 #text2{
     grid-area: 1 / 2 / 1 / 4;
-    background-color: #00f;
+    /* background-color: #00f; */
 }
 #output{
     margin: 0;
     grid-area: 3 / 1 / 3 /4;
-    background-color: #ff0;
+    /* background-color: #ff0; */
 }
 
 body{
